--- a/index.html
+++ b/index.html
@@ -1,17 +1,34 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8"/>
-<title>(仮)scorpion140309 HP</title>
+<title>scorpion140309 HP</title>
 <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
 
-<h1>(仮)scorpion140309 HP</h1>
+<h1>scorpion140309 HP</h1>
 <h2>自作ツールなどを格納しています。</h2>
 
 <p><div id="container">
+<div class="str_subtitle">お知らせ</div>
+<p><a href="http://scorpion140309.web.fc2.com/index.html">http://scorpion140309.web.fc2.com/index.html</a>から移転しました。</p>
+</div></p>
+
+<p><div id="container">
 <div class="str_subtitle">ブログ</div>
-<p><a href="https://scorpion140309.blog.fc2.com/">https://scorpion140309.blog.fc2.com/</a> <div class="str_new">SSL対応しました</div></p>
+<p><a href="https://scorpion140309.blog.fc2.com/">https://scorpion140309.blog.fc2.com/</a></p>
+</div></p>
+
+<p><div id="container">
+<div class="str_subtitle">GMAP対策</div>
+<ul>
+<li>
+	<a href="GMAP/Test_GMAP.html">PC向け</a>
+</li>
+<li>
+	<p><a href="https://scorpion140309.github.io/gmapbf_trial/">スマホ向け</a></p>
+</li>
+</ul>
 </div></p>
 
 <p><div id="container">
@@ -98,13 +115,6 @@
 
 </div></p>
 
-<p><div id="container">
-<div class="str_subtitle">GMAP対策</div>
-<ul>
-<li><a href="GMAP/Test_GMAP.html">目次</a> <div class="str_new">2020.05.28 スマホ対応(トライアル)</div>
-</li>
-</ul>
-</div></p>
 
 <!-- 
 <p><div id="container">
