広告テスト

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
+<div align="center">
+<script data-ad-client="ca-pub-8976415508564777" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+</div>
 
 <h1>scorpion140309 HP</h1>
 <h2>自作ツールなどを格納しています。</h2>
