--- a/GMAP/Test_GMAP.html
+++ b/GMAP/Test_GMAP.html
@@ -2,10 +2,12 @@
 
 <html lang="ja">
 <meta charset="UTF-8"/>
+
 <head>
-<title>GMAP対策</title>
-<link rel="stylesheet" type="text/css" href="js/gmap.css">
-<link rel="stylesheet" type="text/css" href="../main.css">
+	<title>GMAP対策</title>
+	<link rel="stylesheet" type="text/css" href="js/gmap.css">
+	<link rel="stylesheet" type="text/css" href="../main.css">
+	<script data-ad-client="ca-pub-8976415508564777" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 
@@ -15,6 +17,7 @@
 <p>日付が変わると、問題が自動更新されます。</p>
 <!-- <p>2020.03.10 一部修正、文字コードをUTF-8(BOM)に変更</p> -->
 
+<p>PC版</p>
 <ul>
 <li><a href='BusinessStrategy.html'>経営戦略 理解度確認テスト</a></li>
 <li><a href='Marketing.html'>マーケティング 理解度確認テスト</a></li>
@@ -22,14 +25,12 @@
 <li><a href='HRM_and_OB.html'>人・組織 理解度確認テスト</a></li>
 <li><a href='Calc.html'>計算問題(ファイナンス・アカウンティング)</a></li>
 </ul>
+<p>スマホ版</p>
+<ul>
+<li><a href='../gmapbf_trial/index.html'>経営戦略、マーケティング、アカウンティング、人・織</a></li>
+</ul>
 
-<p>四択問題ジェネレータ</p>
-所定の書式のExcelファイルを読み込んで、四択問題を自動生成するソフトを一部修正し、
-HSPプログラミングコンテスト2016にエントリーしました。
-<li><a href="http://dev.onionsoft.net/seed/info.ax?id=1193">四択問題ジェネレータ(HSPプログラミングコンテスト2016 エントリー)</a></li>
-<hr>
-
-<p><a href='http://scorpion140309.web.fc2.com/'>トップページ</a></p>
+<p><a href='../index.html'>トップページ</a></p>
 
 </body>
 
