--- a/GMAP/Test_GMAP.html
+++ b/GMAP/Test_GMAP.html
@@ -32,6 +32,16 @@
 
 <p><a href='../index.html'>トップページ</a></p>
 
+<p><div id="container">
+<div class="str_subtitle">Amazon</div>
+<p>当HPはAmazonアソシエイトを利用しています。</p>
+<p>
+<iframe src="https://rcm-fe.amazon-adsystem.com/e/cm?o=9&p=13&l=ur1&category=amazonrotate&f=ifr&linkID=9d8dbbb4e5cc80bd940559fda7aa426d&t=scorpionassoc-22&tracking_id=scorpionassoc-22" width="468" height="60" scrolling="no" border="0" marginwidth="0" style="border:none;" frameborder="0"></iframe>
+</p>
+</div>
+</p>
+
+
 </body>
 
 </html>
