--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@
 
 <p><div id="container">
 <div class="str_subtitle">Amazon</div>
-当HPはAmazonアソシエイトを利用しています。<BR>
-<BR>
-<iframe src="http://rcm-fe.amazon-adsystem.com/e/cm?t=scorpionassoc-22&o=9&p=8&l=as1&asins=4798035513&ref=qf_sp_asin_til&fc1=000000&IS2=1&lt1=_blank&m=amazon&lc1=0000FF&bc1=000000&bg1=FFFFFF&f=ifr" style="width:120px;height:240px;" scrolling="no" marginwidth="0" marginheight="0" frameborder="0"></iframe>
-<iframe src="http://rcm-fe.amazon-adsystem.com/e/cm?t=scorpionassoc-22&o=9&p=8&l=as1&asins=4797336277&ref=qf_sp_asin_til&fc1=000000&IS2=1&lt1=_blank&m=amazon&lc1=0000FF&bc1=000000&bg1=FFFFFF&f=ifr" style="width:120px;height:240px;" scrolling="no" marginwidth="0" marginheight="0" frameborder="0"></iframe>
-<iframe src="http://rcm-fe.amazon-adsystem.com/e/cm?t=scorpionassoc-22&o=9&p=8&l=as1&asins=B003VTXZW2&ref=qf_sp_asin_til&fc1=000000&IS2=1&lt1=_blank&m=amazon&lc1=0000FF&bc1=000000&bg1=FFFFFF&f=ifr" style="width:120px;height:240px;" scrolling="no" marginwidth="0" marginheight="0" frameborder="0"></iframe>
-</div></p>
+<p>当HPはAmazonアソシエイトを利用しています。</p>
+<p>
+<iframe src="https://rcm-fe.amazon-adsystem.com/e/cm?o=9&p=12&l=ur1&category=amazonrotate&f=ifr&linkID=eec1ce82d8f2ba3cca18f0f6e0556424&t=scorpionassoc-22&tracking_id=scorpionassoc-22" width="300" height="250" scrolling="no" border="0" marginwidth="0" style="border:none;" frameborder="0"></iframe>
+</p>
+</div>
+</p>
 
 
 
