Google Adsense 階層変更テスト2

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <p><div id="container">
 <div class="str_subtitle">お知らせ</div>
-<p><a href="http://scorpion140309.web.fc2.com/index.html">http://scorpion140309.web.fc2.com/index.html</a>から移転しました。</p>
+<p><a href="http://scorpion140309.web.fc2.com/index.html">scorpion140309.web.fc2.com</a>から移転しました。</p>
 </div></p>
 
 <p><div id="container">
@@ -24,7 +24,7 @@
 <div class="str_subtitle">GMAP対策</div>
 <ul>
 <li>
-	<a href="GMAP/Test_GMAP.html">PC向け</a>
+	<a href="gmap.html">PC向け</a>
 </li>
 <li>
 	<p><a href="https://scorpion140309.github.io/gmapbf_trial/">スマホ向け</a></p>
