Google Adsense 階層変更テスト3

--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
 <div class="str_subtitle">GMAP対策</div>
 <ul>
 <li>
-	<a href="gmap.html">PC向け</a>
-</li>
-<li>
-	<p><a href="https://scorpion140309.github.io/gmapbf_trial/">スマホ向け</a></p>
+	<a href="GMAP/Test_GMAP.html">目次</a>
 </li>
 </ul>
 </div></p>
