--- a/GMAP/Test_GMAP.html
+++ b/GMAP/Test_GMAP.html
@@ -34,7 +34,10 @@
 
 <p>当HPはAmazonアソシエイトを利用しています。</p>
 <p>
-<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://rcm-fe.amazon-adsystem.com/e/cm?ref=qf_sp_asin_til&t=scorpionassoc-22&m=amazon&o=9&p=8&l=as1&IS1=1&detail=1&asins=4478020582&linkId=c03d0b8b1bd5fd1330d7b2a454597ab9&bc1=ffffff&lt1=_top&fc1=333333&lc1=0066c0&bg1=ffffff&f=ifr"></iframe>
+<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://rcm-fe.amazon-adsystem.com/e/cm?ref=qf_sp_asin_til&t=scorpionassoc-22&m=amazon&o=9&p=8&l=as1&IS1=1&detail=1&asins=447800496X&linkId=661feca0755660f65c82f7d45bf17b67&bc1=ffffff&lt1=_top&fc1=333333&lc1=0066c0&bg1=ffffff&f=ifr">
+</iframe>
+</p>
+<p>
 <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://rcm-fe.amazon-adsystem.com/e/cm?ref=qf_sp_asin_til&t=scorpionassoc-22&m=amazon&o=9&p=8&l=as1&IS1=1&detail=1&asins=4478107351&linkId=c80fda3c89911f7cf31cefb1006e9514&bc1=ffffff&lt1=_top&fc1=333333&lc1=0066c0&bg1=ffffff&f=ifr">
 </iframe>
 <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://rcm-fe.amazon-adsystem.com/e/cm?ref=qf_sp_asin_til&t=scorpionassoc-22&m=amazon&o=9&p=8&l=as1&IS1=1&detail=1&asins=4478006326&linkId=63f163edf4d651f142a1b04da89bc2cc&bc1=ffffff&lt1=_top&fc1=333333&lc1=0066c0&bg1=ffffff&f=ifr">
