--- a/GMAP/Calc.html
+++ b/GMAP/Calc.html
@@ -3,14 +3,15 @@
 <html lang="ja">
 <meta charset="UTF-8"/>
 <head>
-<title>GMAP対策 練習問題</title>
-<link rel="stylesheet" type="text/css" href="js/gmap.css">
-<script type="text/javascript" src="./js/my_rand.js"></script>
-<script type="text/javascript" src="./js/BreakEven.js"></script>
-<script type="text/javascript" src="./js/WACC.js"></script>
-<script type="text/javascript" src="./js/FCF.js"></script>
-<script type="text/javascript" src="./js/NPV.js"></script>
-<script type="text/javascript" src="./js/CAPM.js"></script>
+	<title>GMAP対策 練習問題</title>
+	<link rel="stylesheet" type="text/css" href="js/gmap.css">
+	<script type="text/javascript" src="./js/my_rand.js"></script>
+	<script type="text/javascript" src="./js/BreakEven.js"></script>
+	<script type="text/javascript" src="./js/WACC.js"></script>
+	<script type="text/javascript" src="./js/FCF.js"></script>
+	<script type="text/javascript" src="./js/NPV.js"></script>
+	<script type="text/javascript" src="./js/CAPM.js"></script>
+	<script data-ad-client="ca-pub-8976415508564777" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 
