--- a/GMAP/Accounting_ans.html
+++ b/GMAP/Accounting_ans.html
@@ -3,10 +3,11 @@
 <html lang="ja">
 <meta charset="UTF-8"/>
 <head>
-<title>GMAP対策 理解度確認テスト(アカウンティング)</title>
-<link rel="stylesheet" type="text/css" href="js/gmap.css">
-<script type="text/javascript" src="./js/my_rand.js"></script>
-<script type="text/javascript" src="./js/Accounting_4taku.js"></script>
+	<title>GMAP対策 理解度確認テスト(アカウンティング)</title>
+	<link rel="stylesheet" type="text/css" href="js/gmap.css">
+	<script type="text/javascript" src="./js/my_rand.js"></script>
+	<script type="text/javascript" src="./js/Accounting_4taku.js"></script>
+	<script data-ad-client="ca-pub-8976415508564777" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 
