--- a/GMAP/Test_GMAP.html
+++ b/GMAP/Test_GMAP.html
@@ -27,7 +27,7 @@
 </ul>
 <p>スマホ版</p>
 <ul>
-<li><a href='../gmapbf_trial/index.html'>経営戦略、マーケティング、アカウンティング、人・織</a></li>
+<li><a href='../gmapbf_mobile_training/index.html'>経営戦略、マーケティング、アカウンティング、人・織</a></li>
 </ul>
 
 <p><a href='../index.html'>トップページ</a></p>
@@ -37,23 +37,6 @@
 <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://rcm-fe.amazon-adsystem.com/e/cm?ref=qf_sp_asin_til&t=scorpionassoc-22&m=amazon&o=9&p=8&l=as1&IS1=1&detail=1&asins=447800496X&linkId=661feca0755660f65c82f7d45bf17b67&bc1=ffffff&lt1=_top&fc1=333333&lc1=0066c0&bg1=ffffff&f=ifr">
 </iframe>
 </p>
-<p>
-<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://rcm-fe.amazon-adsystem.com/e/cm?ref=qf_sp_asin_til&t=scorpionassoc-22&m=amazon&o=9&p=8&l=as1&IS1=1&detail=1&asins=4478107351&linkId=c80fda3c89911f7cf31cefb1006e9514&bc1=ffffff&lt1=_top&fc1=333333&lc1=0066c0&bg1=ffffff&f=ifr">
-</iframe>
-<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://rcm-fe.amazon-adsystem.com/e/cm?ref=qf_sp_asin_til&t=scorpionassoc-22&m=amazon&o=9&p=8&l=as1&IS1=1&detail=1&asins=4478006326&linkId=63f163edf4d651f142a1b04da89bc2cc&bc1=ffffff&lt1=_top&fc1=333333&lc1=0066c0&bg1=ffffff&f=ifr">
-</iframe>
-<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://rcm-fe.amazon-adsystem.com/e/cm?ref=qf_sp_asin_til&t=scorpionassoc-22&m=amazon&o=9&p=8&l=as1&IS1=1&detail=1&asins=4478008760&linkId=72ed334faf3391dac1fef85060ec339b&bc1=ffffff&lt1=_top&fc1=333333&lc1=0066c0&bg1=ffffff&f=ifr">
-</iframe>
-</p>
-<p>
-<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://rcm-fe.amazon-adsystem.com/e/cm?ref=qf_sp_asin_til&t=scorpionassoc-22&m=amazon&o=9&p=8&l=as1&IS1=1&detail=1&asins=4478066027&linkId=0b7e4cd26e62dc89cdafd34f9979f30b&bc1=ffffff&lt1=_top&fc1=333333&lc1=0066c0&bg1=ffffff&f=ifr">
-</iframe>
-<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://rcm-fe.amazon-adsystem.com/e/cm?ref=qf_sp_asin_til&t=scorpionassoc-22&m=amazon&o=9&p=8&l=as1&IS1=1&detail=1&asins=4478003211&linkId=d834bb123271aa911dc98071ff01f3d5&bc1=ffffff&lt1=_top&fc1=333333&lc1=0066c0&bg1=ffffff&f=ifr">
-</iframe>
-<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://rcm-fe.amazon-adsystem.com/e/cm?ref=qf_sp_asin_til&t=scorpionassoc-22&m=amazon&o=9&p=8&l=as1&IS1=1&detail=1&asins=4478002746&linkId=c2b74278438c3a3487bcfcb99f6c0d81&bc1=ffffff&lt1=_top&fc1=333333&lc1=0066c0&bg1=ffffff&f=ifr">
-</iframe>
-</p>
-
 
 </body>
 
