Google Search Console

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 <p>OpenCVで日本語表示(Windowsのみ)</p>
 <ul>
 <li><a href="arc/cpp/putText_Jpn_src_160626a.zip">OpenCVで日本語表示するためのサンプルコード(Windowsのみ)</a>　(<a href="arc/cpp/opencv_nihongo.png">スクリーンショット</a>)
-<li><a href="arc/cpp/putText_Jpn_src_20200511.zip">OpenCVで日本語表示するためのサンプルコード(Windowsのみ、UNICODE対応、アンチエイリアス対応)</a>　(<a href="arc/cpp/opencv_nihongo_20200311.png">スクリーンショット</a>) <div class="str_new">画像1ラインのバイトサイズが4の倍数でないときに、レンダリング結果が異常になる不具合を修正</div>
+<li><a href="arc/cpp/putText_Jpn_src_20200511.zip">OpenCVで日本語表示するためのサンプルコード(Windowsのみ、UNICODE対応、アンチエイリアス対応)</a>　(<a href="arc/cpp/opencv_nihongo_20200311.png">スクリーンショット</a>)
 
 </ul>
 </div></p>
