体裁を修正。不要ファイルを削除。

--- a/GMAP/Test_GMAP.html
+++ b/GMAP/Test_GMAP.html
@@ -4,8 +4,7 @@
 <meta charset="UTF-8"/>
 
 <head>
-	<title>GMAP対策</title>
-	<link rel="stylesheet" type="text/css" href="js/gmap.css">
+	<title>GMAP 練習問題</title>
 	<link rel="stylesheet" type="text/css" href="../main.css">
 	<script data-ad-client="ca-pub-8976415508564777" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
@@ -13,11 +12,11 @@
 
 <body>
 
-<p>GMAP対策 練習問題(要Javascript)</p>
-<p>日付が変わると、問題が自動更新されます。</p>
-<!-- <p>2020.03.10 一部修正、文字コードをUTF-8(BOM)に変更</p> -->
+<h1>GMAP 練習問題</h1>
+<h2>日付が変わると、出題順序がシャッフルされます。</h2>
 
-<p>PC版</p>
+<p><div id="container">
+<div class="str_subtitle">PC版</div>
 <ul>
 <li><a href='BusinessStrategy.html'>経営戦略 理解度確認テスト</a></li>
 <li><a href='Marketing.html'>マーケティング 理解度確認テスト</a></li>
@@ -25,17 +24,28 @@
 <li><a href='HRM_and_OB.html'>人・組織 理解度確認テスト</a></li>
 <li><a href='Calc.html'>計算問題(ファイナンス・アカウンティング)</a></li>
 </ul>
-<p>スマホ版</p>
+</div></p>
+
+<p><div id="container">
+<div class="str_subtitle">スマホ版</div>
 <ul>
 <li><a href='../gmapbf_mobile_training/index.html'>経営戦略、マーケティング、アカウンティング、人・織</a></li>
 </ul>
+</div></p>
 
-<p><a href='../index.html'>トップページ</a></p>
+<p><div id="container">
+<div class="str_subtitle">トップページへ</div>
+<p><a href='../index.html'>戻る</a></p>
+</div></p>
 
+<p><div id="container">
+<div class="str_subtitle">Amazon</div>
 <p>当HPはAmazonアソシエイトを利用しています。</p>
 <p>
 <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://rcm-fe.amazon-adsystem.com/e/cm?ref=qf_sp_asin_til&t=scorpionassoc-22&m=amazon&o=9&p=8&l=as1&IS1=1&detail=1&asins=447800496X&linkId=661feca0755660f65c82f7d45bf17b67&bc1=ffffff&lt1=_top&fc1=333333&lc1=0066c0&bg1=ffffff&f=ifr">
 </iframe>
+</p>
+</div>
 </p>
 
 </body>
