--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div class="str_subtitle">GMAP対策</div>
 <ul>
 <li>
-	<a href="GMAP/Test_GMAP.html">目次</a>
+	<a href="GMAP/Test_GMAP.html">練習問題</a>
 </li>
 </ul>
 </div></p>
