Test_GMAP2.html

--- a/GMAP/Test_GMAP2.html
+++ b/GMAP/Test_GMAP2.html
@@ -1,4 +1,4 @@
-﻿<html lang="ja">
+<html lang="ja">
 	<head>
 		<meta charset="UTF-8"/>
 		<title>GMAP 練習問題</title>
@@ -6,12 +6,11 @@
 		<script data-ad-client="ca-pub-8976415508564777" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	</head>
 	<body>
-
 		<h1>GMAP 練習問題</h1>
 		<h2>日付が変わると、出題順序がシャッフルされます。</h2>
 
 		<p><div id="container">
-			<div class="str_subtitle">PC版</div>
+		<div class="str_subtitle">PC版</div>
 			<ul>
 				<li><a href='BusinessStrategy.html'>経営戦略 理解度確認テスト</a></li>
 				<li><a href='Marketing.html'>マーケティング 理解度確認テスト</a></li>
@@ -22,16 +21,18 @@
 		</div></p>
 
 		<p><div id="container">
-			<div class="str_subtitle">スマホ版</div>
+		<p><div class="str_subtitle">スマホ版</div>
 			<ul>
 				<li><a href='../gmapbf_mobile_training/index.html'>経営戦略、マーケティング、アカウンティング、人・織</a></li>
 			</ul>
-		</div></p>
+		</div><p>
 
 		<p><div id="container">
-			<div class="str_subtitle">トップページへ</div>
-			<p><a href='../index.html'>戻る</a></p>
-		</div></p>
+		<p><div class="str_subtitle">トップページへ</div>
+			<ul>
+				<li><a href='../index.html'>もどる</a></li>
+			</ul>
+		</div><p>
 
 		<p><div id="container">
 		<div class="str_subtitle">Amazon</div>
@@ -40,6 +41,7 @@
 				<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://rcm-fe.amazon-adsystem.com/e/cm?ref=qf_sp_asin_til&t=scorpionassoc-22&m=amazon&o=9&p=8&l=as1&IS1=1&detail=1&asins=447800496X&linkId=661feca0755660f65c82f7d45bf17b67&bc1=ffffff&lt1=_top&fc1=333333&lc1=0066c0&bg1=ffffff&f=ifr">
 				</iframe>
 			</p>
-		</div></p>
+		</div>
+		</p>
 	</body>
 </html>
