広告設定のテスト

--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
 		<script data-ad-client="ca-pub-8976415508564777" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	</head>
 	<body>
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+		<!-- scorpion140309_githubpages -->
+		<ins class="adsbygoogle"
+			 style="display:block"
+			 data-ad-client="ca-pub-8976415508564777"
+			 data-ad-slot="4938783481"
+			 data-ad-format="auto"
+			 data-full-width-responsive="true"></ins>
+		<script>
+			 (adsbygoogle = window.adsbygoogle || []).push({});
+		</script>
 		<h1>scorpion140309 HP</h1>
 		<h2>自作ツールなどを格納しています。</h2>
 
