--- a/GMAP/Calc_ans.html
+++ b/GMAP/Calc_ans.html
@@ -3,7 +3,7 @@
 <html lang="ja">
 <meta charset="UTF-8"/>
 <head>
-<title>GMAP対策 練習問題</title>
+	<title>GMAP対策 練習問題</title>
 	<link rel="stylesheet" type="text/css" href="js/gmap.css">
 	<script type="text/javascript" src="./js/my_rand.js"></script>
 	<script type="text/javascript" src="./js/BreakEven.js"></script>
@@ -11,11 +11,22 @@
 	<script type="text/javascript" src="./js/FCF.js"></script>
 	<script type="text/javascript" src="./js/NPV.js"></script>
 	<script type="text/javascript" src="./js/CAPM.js"></script>
-	<script data-ad-client="ca-pub-8976415508564777" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 
 <body>
+
+<center>
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<!-- scorpion140309_githubpages_wide -->
+	<ins class="adsbygoogle"
+		 style="display:inline-block;width:728px;height:90px"
+		 data-ad-client="ca-pub-8976415508564777"
+		 data-ad-slot="9506366843"></ins>
+	<script>
+		 (adsbygoogle = window.adsbygoogle || []).push({});
+	</script>
+</center>
 
 <p>GMAP対策 計算を要する練習問題(要JavaScript)</p>
 <p>日付が変わると、数値が自動更新されます。</p>
@@ -62,7 +73,6 @@ test_capm.Test_CAPM( flag_anser );
 
 <hr>
 <p><a href="Test_GMAP.html">GMAP対策 目次</a></p>
-<p>
 
 
 </body>
