--- a/GMAP/HRM_and_OB.html
+++ b/GMAP/HRM_and_OB.html
@@ -7,11 +7,22 @@
 	<link rel="stylesheet" type="text/css" href="js/gmap.css">
 	<script type="text/javascript" src="./js/my_rand.js"></script>
 	<script type="text/javascript" src="./js/HRM_and_OB_4taku.js"></script>
-	<script data-ad-client="ca-pub-8976415508564777" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 
 <body>
+
+<center>
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<!-- scorpion140309_githubpages_wide -->
+	<ins class="adsbygoogle"
+		 style="display:inline-block;width:728px;height:90px"
+		 data-ad-client="ca-pub-8976415508564777"
+		 data-ad-slot="9506366843"></ins>
+	<script>
+		 (adsbygoogle = window.adsbygoogle || []).push({});
+	</script>
+</center>
 
 <p>GMAP経営戦略 理解度確認テスト(要JavaScript)</p>
 <p>日付が変わると、問題が自動更新されます。</p>
