--- a/GMAP/Calc.html
+++ b/GMAP/Calc.html
@@ -11,11 +11,22 @@
 	<script type="text/javascript" src="./js/FCF.js"></script>
 	<script type="text/javascript" src="./js/NPV.js"></script>
 	<script type="text/javascript" src="./js/CAPM.js"></script>
-	<script data-ad-client="ca-pub-8976415508564777" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 
 <body>
+
+<center>
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<!-- scorpion140309_githubpages_wide -->
+	<ins class="adsbygoogle"
+		 style="display:inline-block;width:728px;height:90px"
+		 data-ad-client="ca-pub-8976415508564777"
+		 data-ad-slot="9506366843"></ins>
+	<script>
+		 (adsbygoogle = window.adsbygoogle || []).push({});
+	</script>
+</center>
 
 <p>GMAP対策 計算を要する練習問題(要JavaScript)</p>
 <p>日付が変わると、数値が自動更新されます。</p>
