--- a/GMAP/Test_GMAP.html
+++ b/GMAP/Test_GMAP.html
@@ -3,20 +3,20 @@
 		<meta charset="UTF-8"/>
 		<title>GMAP 練習問題</title>
 		<link rel="stylesheet" type="text/css" href="../main.css">
-		<script data-ad-client="ca-pub-8976415508564777" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	</head>
 	<body>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-		<!-- scorpion140309_githubpages -->
-		<ins class="adsbygoogle"
-			 style="display:block"
-			 data-ad-client="ca-pub-8976415508564777"
-			 data-ad-slot="4938783481"
-			 data-ad-format="auto"
-			 data-full-width-responsive="true"></ins>
-		<script>
-			 (adsbygoogle = window.adsbygoogle || []).push({});
-		</script>
+		<center>
+			<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+			<!-- scorpion140309_githubpages_wide -->
+			<ins class="adsbygoogle"
+				 style="display:inline-block;width:728px;height:90px"
+				 data-ad-client="ca-pub-8976415508564777"
+				 data-ad-slot="9506366843"></ins>
+			<script>
+				 (adsbygoogle = window.adsbygoogle || []).push({});
+			</script>
+		</center>
+
 		<h1>GMAP 練習問題</h1>
 		<h2>日付が変わると、出題順序がシャッフルされます。</h2>
 
