GMAPモバイルトレーニングを横長ウィンドウに適用できるかテスト中。

--- a/GMAP/Test_GMAP.html
+++ b/GMAP/Test_GMAP.html
@@ -35,6 +35,7 @@
 			<div class="str_subtitle">スマホ版</div>
 			<ul>
 				<li><a href='../gmapbf_mobile_training/index.html'>経営戦略、マーケティング、アカウンティング、人・織</a></li>
+				<li><a href='../gmapbf_mobile_training/index_w.html'>(テスト中) 横長ウィンドウ用</a></li>
 			</ul>
 		</div></p>
 
