Google Analytics 開始

--- a/index.html
+++ b/index.html
@@ -1,28 +1,52 @@
 <html lang="ja">
 	<head>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-99FK13PW8Q"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'G-99FK13PW8Q');
+		</script>
 		<meta charset="UTF-8"/>
 		<title>scorpion140309 HP</title>
 		<link rel="stylesheet" type="text/css" href="main.css">
 		<script data-ad-client="ca-pub-8976415508564777" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	</head>
 	<body>
-		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-		<!-- scorpion140309_githubpages -->
-		<ins class="adsbygoogle"
-			 style="display:block"
-			 data-ad-client="ca-pub-8976415508564777"
-			 data-ad-slot="4938783481"
-			 data-ad-format="auto"
-			 data-full-width-responsive="true"></ins>
-		<script>
-			 (adsbygoogle = window.adsbygoogle || []).push({});
-		</script>
-		<h1>scorpion140309 HP</h1>
-		<h2>自作ツールなどを格納しています。</h2>
+		<!-- Ad -->
+		<p>
+			<table border="0" width="100%" >
+				<tr>
+					<td	align="center"?
+						<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+						<!-- scorpion140309_githubpages_wide -->
+						<ins class="adsbygoogle"
+							style="display:inline-block;width:728px;height:90px"
+							data-ad-client="ca-pub-8976415508564777"
+							data-ad-slot="9506366843"></ins>
+						<script>
+							(adsbygoogle = window.adsbygoogle || []).push({});
+						</script>
+					</td>
+				</tr>
+			</table>
+		</p>
+		<div class="str_title">scorpion140309 HP</div>
+		<div class="str_subtitle">自作ツールなどを格納しています。</div>
 
 		<p><div id="container">
 		<div class="str_subtitle">お知らせ</div>
-		<p><a href="http://scorpion140309.web.fc2.com/index.html">scorpion140309.web.fc2.com</a>から移転しました。</p>
+		<ul>
+			<li>
+				アクセス解析のため、Google Analytics を利用しています。				<a href="https://policies.google.com/privacy">Google プライバシーポリシー</a>	
+			</li>
+			<li>
+				<a href="http://scorpion140309.web.fc2.com/index.html">scorpion140309.web.fc2.com</a>から移転しました。
+			</li>
+		</ul>
+	
 		</div></p>
 
 		<p><div id="container">
