--- a/GMAP/Test_GMAP.html
+++ b/GMAP/Test_GMAP.html
@@ -1,5 +1,14 @@
 ﻿<html lang="ja">
 	<head>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-99FK13PW8Q"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'G-99FK13PW8Q');
+		</script>
 		<meta charset="UTF-8"/>
 		<title>GMAP 練習問題</title>
 		<link rel="stylesheet" type="text/css" href="../main.css">
