GMAP練習問題のお知らせを更新。

--- a/GMAP/Test_GMAP.html
+++ b/GMAP/Test_GMAP.html
@@ -26,9 +26,19 @@
 			</script>
 		</center>
 
-		<h1>GMAP 練習問題</h1>
-		<h2>日付が変わると、出題順序がシャッフルされます。</h2>
+		<div class="str_title">GMAP 練習問題</div>
+		<div class="str_subtitle">日付が変わると、出題順序がシャッフルされます。</div>
 
+		<p><div id="container">
+		<div class="str_subtitle">お知らせ</div>
+		<ul>
+			<li>
+				アクセス解析のため、Google Analytics を利用しています。				<a href="https://policies.google.com/privacy">Google プライバシーポリシー</a>	
+			</li>
+			<li>スマホ版に横長画面対応のページを追加しました。出題内容は従来版と同じです
+			</li>
+		</ul>
+		</div>
 		<p><div id="container">
 			<div class="str_subtitle">PC版</div>
 			<ul>
