GMAP-BFの各ページにGoogle Analytics用のコードを追加。

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				アクセス解析のため、Google Analytics を利用しています。				<a href="https://policies.google.com/privacy">Google プライバシーポリシー</a>	
 			</li>
 			<li>
-				<a href="http://scorpion140309.web.fc2.com/index.html">scorpion140309.web.fc2.com</a>から移転しました。
+				<a href="http://scorpion140309.web.fc2.com/">scorpion140309.web.fc2.com</a>から移転しました。
 			</li>
 		</ul>
 	
