--- a/GMAP/Accounting_ans.html
+++ b/GMAP/Accounting_ans.html
@@ -3,6 +3,15 @@
 <html lang="ja">
 <meta charset="UTF-8"/>
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-99FK13PW8Q"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-99FK13PW8Q');
+	</script>
 	<title>GMAP対策 理解度確認テスト(アカウンティング)</title>
 	<link rel="stylesheet" type="text/css" href="js/gmap.css">
 	<script type="text/javascript" src="./js/my_rand.js"></script>
