一部のHTMLファイルのヘッダを変更

--- a/GMAP/Calc.html
+++ b/GMAP/Calc.html
@@ -1,7 +1,4 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-
-<html lang="ja">
-<meta charset="UTF-8"/>
+﻿<html lang="ja">
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-99FK13PW8Q"></script>
@@ -12,6 +9,7 @@
 
 	  gtag('config', 'G-99FK13PW8Q');
 	</script>
+	<meta charset="UTF-8"/>
 	<title>GMAP対策 練習問題</title>
 	<link rel="stylesheet" type="text/css" href="js/gmap.css">
 	<script type="text/javascript" src="./js/my_rand.js"></script>
