--- a/GMAP/Test_GMAP.html
+++ b/GMAP/Test_GMAP.html
@@ -35,7 +35,7 @@
 			<li>
 				アクセス解析のため、Google Analytics を利用しています。				<a href="https://policies.google.com/privacy">Google プライバシーポリシー</a>	
 			</li>
-			<li>スマホ版に横長画面対応のページを追加しました。出題内容は従来版と同じです
+			<li>スマホ版に横長画面対応のページを追加しました。出題内容は従来版と同じです。 <div class="str_new">new!</div>
 			</li>
 		</ul>
 		</div>
@@ -47,6 +47,7 @@
 				<li><a href='Accounting.html'>アカウンティング 理解度確認テスト</a></li>
 				<li><a href='HRM_and_OB.html'>人・組織 理解度確認テスト</a></li>
 				<li><a href='Calc.html'>計算問題(ファイナンス・アカウンティング)</a></li>
+				<li><a href='../gmapbf_mobile_training/index_w.html'>(テスト中、スマホ版から) 横長ウィンドウ用</a> <div class="str_new">new!</div></li>
 			</ul>
 		</div></p>
 
@@ -54,7 +55,6 @@
 			<div class="str_subtitle">スマホ版</div>
 			<ul>
 				<li><a href='../gmapbf_mobile_training/'>経営戦略、マーケティング、アカウンティング、人・織</a></li>
-				<li><a href='../gmapbf_mobile_training/index_w.html'>(テスト中) 横長ウィンドウ用</a></li>
 			</ul>
 		</div></p>
 
