--- a/GMAP/Calc_ans.html
+++ b/GMAP/Calc_ans.html
@@ -10,7 +10,7 @@
 	  gtag('config', 'G-99FK13PW8Q');
 	</script>
 	<meta charset="UTF-8"/>
-	<title>GMAP対策 練習問題</title>
+	<title>GMAP対策 計算練習問題</title>
 	<link rel="stylesheet" type="text/css" href="js/gmap.css">
 	<script type="text/javascript" src="./js/my_rand.js"></script>
 	<script type="text/javascript" src="./js/BreakEven.js"></script>
