プログラミング関連の項目を追加。 - スクリーンセーバーの起動を抑制(HSP) - 二値化処理(C++ & OpenCV)

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 		</p>
 
 		<p><div class="str_subsubtitle">HSP</div></p>
-		<p><a href="arc/HSP/memo_angou_140311g.zip">テキストデータの暗号化、復号化するアプリのソースファイル一式</a></p>
+		<p><a href="https://github.com/scorpion140309/StopScreenSaver">スクリーンセーバーの起動を抑制するソフト(Github)<p><a href="arc/HSP/memo_angou_140311g.zip">テキストデータの暗号化、復号化するアプリのソースファイル一式</a></p>
 		<p><a href="arc/HSP/hsptv_joint_test.hsp">物理エンジン"OBAQ"上で関節の動作を表現しようとしたサンプルコード</a></p>
 		<p><a href="arc/HSP/obaq_joint_normal.zip">物理エンジン"OBAQ"上で関節の動作を表現しようとした実行ファイル</a></p>
 		<p><a href="arc/HSP/hsptv_joint_test.wmv">物理エンジン"OBAQ"上で関節の動作を表現しようとしたアプリの動画(WMVファイル)</a></p>
@@ -135,7 +135,11 @@
 		<ul>
 		<li><a href="arc/cpp/putText_Jpn_src_160626a.zip">OpenCVで日本語表示するためのサンプルコード(Windowsのみ)</a>　(<a href="arc/cpp/opencv_nihongo.png">スクリーンショット</a>)
 		<li><a href="arc/cpp/putText_Jpn_src_20200511.zip">OpenCVで日本語表示するためのサンプルコード(Windowsのみ、UNICODE対応、アンチエイリアス対応)</a>　(<a href="arc/cpp/opencv_nihongo_20200311.png">スクリーンショット</a>)
-
+		</ul>
+		<p>OpenCVで画像の二値化処理</p>
+		<ul>
+		<li><a href="https://github.com/scorpion140309/binarization_demo">ソースファイル一式(Github)</a>
+		<li><a href="https://www.youtube.com/watch?v=t2DtPZYzzR0">動画(Youtube)</a>
 		</ul>
 		</div></p>
 
