Amazon アソシエイトの仕様変更に対応。

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 		<div class="str_subtitle">Amazon</div>
 			<p>当HPはAmazonアソシエイトを利用しています。</p>
 			<p>
-			<iframe src="https://rcm-fe.amazon-adsystem.com/e/cm?o=9&p=12&l=ur1&category=amazonrotate&f=ifr&linkID=eec1ce82d8f2ba3cca18f0f6e0556424&t=scorpionassoc-22&tracking_id=scorpionassoc-22" width="300" height="250" scrolling="no" border="0" marginwidth="0" style="border:none;" frameborder="0"></iframe>
+				<a target="_blank" href="https://www.amazon.co.jp/gp/search?ie=UTF8&tag=scorpionassoc-22&linkCode=ur2&linkId=617cb7d018f2f55cec85f0c3a8451e8a&camp=247&creative=1211&index=aps&keywords=Amazon">Amazonアソシエイト</a>
 			</p>
 		</div>
 		</p>
