--- a/GMAP/Test_GMAP.html
+++ b/GMAP/Test_GMAP.html
@@ -67,8 +67,7 @@
 		<div class="str_subtitle">Amazon</div>
 			<p>当HPはAmazonアソシエイトを利用しています。</p>
 			<p>
-				<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://rcm-fe.amazon-adsystem.com/e/cm?ref=qf_sp_asin_til&t=scorpionassoc-22&m=amazon&o=9&p=8&l=as1&IS1=1&detail=1&asins=447800496X&linkId=661feca0755660f65c82f7d45bf17b67&bc1=ffffff&lt1=_top&fc1=333333&lc1=0066c0&bg1=ffffff&f=ifr">
-				</iframe>
+				<a target="_blank" href="https://www.amazon.co.jp/gp/search?ie=UTF8&tag=scorpionassoc-22&linkCode=ur2&linkId=814565ce56d882a850c4a345d3cea417&camp=247&creative=1211&index=digital-text&keywords=グロービスMBA">グロービスMBA関連書籍</a>
 			</p>
 		</div></p>
 	</body>
