Amazon アソシエイトのリンクの装飾などを変更。

--- a/GMAP/Test_GMAP.html
+++ b/GMAP/Test_GMAP.html
@@ -67,7 +67,10 @@
 		<div class="str_subtitle">Amazon</div>
 			<p>当HPはAmazonアソシエイトを利用しています。</p>
 			<p>
-				<a target="_blank" href="https://www.amazon.co.jp/gp/search?ie=UTF8&tag=scorpionassoc-22&linkCode=ur2&linkId=814565ce56d882a850c4a345d3cea417&camp=247&creative=1211&index=digital-text&keywords=グロービスMBA">グロービスMBA関連書籍</a>
+				<a target="_blank" rel="noopener noreferrer" href="https://www.amazon.co.jp/gp/search?ie=UTF8&tag=scorpionassoc-22&linkCode=ur2&linkId=814565ce56d882a850c4a345d3cea417&camp=247&creative=1211&index=digital-text&keywords=グロービスMBA"><img src="https://images-fe.ssl-images-amazon.com/images/G/09/associates/buttons/assocbutt_or_buy.png" alt="Amazon"></a>
+			</p>
+			<p>
+				<a target="_blank" rel="noopener noreferrer" href="https://www.amazon.co.jp/gp/search?ie=UTF8&tag=scorpionassoc-22&linkCode=ur2&linkId=814565ce56d882a850c4a345d3cea417&camp=247&creative=1211&index=digital-text&keywords=グロービスMBA">グロービスMBA関連書籍</a>
 			</p>
 		</div></p>
 	</body>
