--- a/index.html
+++ b/index.html
@@ -160,7 +160,10 @@
 		<div class="str_subtitle">Amazon</div>
 			<p>当HPはAmazonアソシエイトを利用しています。</p>
 			<p>
-				<a target="_blank" href="https://www.amazon.co.jp/gp/search?ie=UTF8&tag=scorpionassoc-22&linkCode=ur2&linkId=617cb7d018f2f55cec85f0c3a8451e8a&camp=247&creative=1211&index=aps&keywords=Amazon">Amazonアソシエイト</a>
+				<a target="_blank" rel="noopener noreferrer" href="https://www.amazon.co.jp/gp/search?ie=UTF8&tag=scorpionassoc-22&linkCode=ur2&linkId=617cb7d018f2f55cec85f0c3a8451e8a&camp=247&creative=1211&index=aps&keywords=Amazon"><img src="https://images-fe.ssl-images-amazon.com/images/G/09/associates/buttons/assocbutt_or_buy.png" alt="Amazon"></a>
+			</p>
+			<p>
+				<a target="_blank" rel="noopener noreferrer" href="https://www.amazon.co.jp/gp/search?ie=UTF8&tag=scorpionassoc-22&linkCode=ur2&linkId=617cb7d018f2f55cec85f0c3a8451e8a&camp=247&creative=1211&index=aps&keywords=Amazon">Amazonアソシエイト</a>
 			</p>
 		</div>
 		</p>
