Math has been added.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<div class="str_title">scorpion140309 HP</div>
 		<div class="str_subtitle">自作ツールなどを格納しています。</div>
 
-		<p><div id="container">
+		<div id="container">
 		<div class="str_subtitle">お知らせ</div>
 		<ul>
 			<li>
@@ -47,30 +47,39 @@
 			</li>
 		</ul>
 	
-		</div></p>
+		</div>
 
-		<p><div id="container">
+		<div id="container">
 		<div class="str_subtitle">ブログ</div>
 		<p><a href="https://scorpion140309.blog.fc2.com/">https://scorpion140309.blog.fc2.com/</a></p>
-		</div></p>
+		</div>
 
-		<p><div id="container">
+		<div id="container">
 		<div class="str_subtitle">GMAP対策</div>
 		<ul>
 		<li>
 			<a href="GMAP/Test_GMAP.html">練習問題</a>
 		</li>
 		</ul>
-		</div></p>
+		</div>
 
-		<p><div id="container">
-		<p><div class="str_subtitle">プログラミング関連(Github)</div></p>
+		<div id="container">
+		<div class="str_subtitle">数学関連</div>
+		<ul>
+		<li>
+			<a href="math/index_j.html">練習問題</a>
+		</li>
+		</ul>
+		</div>
+
+		<div id="container">
+		<div class="str_subtitle">プログラミング関連(Github)</div>
 		<p><a href="https://github.com/scorpion140309">https://github.com/scorpion140309</a></p>
 		</div><p>
 
-		<p><div id="container">
+		<div id="container">
 
-		<p><div class="str_subtitle">プログラミング関連</div></p>
+		<div class="str_subtitle">プログラミング関連</div>
 
 		<p>
 		特に断り書きがない場合、公開しているソースコードはご自由にお使いいただいて構いません。<br>
@@ -81,7 +90,7 @@
 		<u>ただし、それによって発生した如何なる問題が発生しても、当方は責任を負いません。利用者ご自身の責任でご利用ください。</u>
 		</p>
 
-		<p><div class="str_subsubtitle">HSP</div></p>
+		<div class="str_subsubtitle">HSP</div>
 		<p><a href="https://github.com/scorpion140309/StopScreenSaver">スクリーンセーバーの起動を抑制するソフト(Github)<p><a href="arc/HSP/memo_angou_140311g.zip">テキストデータの暗号化、復号化するアプリのソースファイル一式</a></p>
 		<p><a href="arc/HSP/hsptv_joint_test.hsp">物理エンジン"OBAQ"上で関節の動作を表現しようとしたサンプルコード</a></p>
 		<p><a href="arc/HSP/obaq_joint_normal.zip">物理エンジン"OBAQ"上で関節の動作を表現しようとした実行ファイル</a></p>
@@ -91,7 +100,7 @@
 		<p><a href="arc/HSP/Make4takuJS_160121d_src.zip">Excelファイルで記述された四択問題からHTMLファイルを作成するアプリのソース</a>
 		</p>
 
-		<p><div class="str_subsubtitle">C++/CLI</div></p>
+		<div class="str_subsubtitle">C++/CLI</div>
 		<p>外部アプリケーションの標準出力、エラー出力、入力を取得</p>
 		<ul>
 		<li><a href="http://www.vector.co.jp/vpack/browse/person/an058540.html">外部アプリの標準出力、エラー出力、入力を取得するアプリの実行ファイル(Vector)</a></li>
@@ -115,13 +124,13 @@
 		</ul>
 		</p>
 
-		<p><div class="str_subsubtitle">C#</div></p>
+		<div class="str_subsubtitle">C#</div>
 		<p>FTPによるファイルアップロード</p>
 		<ul>
 		<li><a href="arc/C_Sharp/FTP_test_170629a_src.zip">ソースファイル一式</a></li>
 		</ul>
 
-		<p><div class="str_subsubtitle">C++</div></p>
+		<div class="str_subsubtitle">C++</div>
 		<p>WindowsAPI</p>
 		<ul>
 		<li><a href="arc/cpp/CHECK_MULTI_ACTIVATION.zip">多重起動防止サンプルコード(cppファイル+hファイル)</a><li>
@@ -141,9 +150,9 @@
 		<li><a href="https://github.com/scorpion140309/binarization_demo">ソースファイル一式(Github)</a>
 		<li><a href="https://www.youtube.com/watch?v=t2DtPZYzzR0">動画(Youtube)</a>
 		</ul>
-		</div></p>
+		</div>
 
-		<p><div id="container">
+		<div id="container">
 
 		<div class="str_subtitle">ゲーム関連</div>
 
@@ -153,10 +162,10 @@
 		<li><a href="arc/nettou_powerful_koushien/gekisaba_item_140323_xlsx.zip">激闘サバイバル(パワフル)取得アイテム Excel(zip)</a></li>
 		</ul>
 
-		</div></p>
+		</div>
 
 
-		<p><div id="container">
+		<div id="container">
 		<div class="str_subtitle">Amazon</div>
 			<p>当HPはAmazonアソシエイトを利用しています。</p>
 			<p>
