math contents have been modified.

--- a/math/index.html
+++ b/math/index.html
@@ -53,7 +53,14 @@
 		<div id="container">
 			<div class="str_subsubtitle">Contents</div>
 				<ul>
-					<li><a href="../Factorization-Training/">Factorization Training  (a x^2 + b x + c -> (d x + e)(f x + g))</a></li>
+					<li><a href="../Factorization-Training/index_basic.html">Factorization Training Basic</a></li>
+					<ul>
+						<li>x^2 + b x + c = (x + e)(x + g)</li>
+					</ul>
+					<li><a href="../Factorization-Training/">Factorization Training</a></li>
+					<ul>
+						<li>a x^2 + b x + c = (d x + e)(f x + g)</li>
+					</ul>
 				</ul>
 			</div>
 		</div>
