--- a/math/index_j.html
+++ b/math/index_j.html
@@ -51,7 +51,14 @@
 		<div id="container">
 			<div class="str_subsubtitle">コンテンツ</div>
 				<ul>
-					<li><a href="https://scorpion140309.github.io/Factorization-Training/">因数分解の練習 (a x^2 + b x + c -> (d x + e)(f x + g))</a></li>
+					<li><a href="../Factorization-Training/index_basic.html">因数分解の練習(基礎)</a></li>
+					<ul>
+						<li>x^2 + b x + c = (x + e)(x + g)</li>
+					</ul>
+					<li><a href="../Factorization-Training/">因数分解の練習(応用)</a></li>
+					<ul>
+						<li>a x^2 + b x + c = (d x + e)(f x + g)</li>
+					</ul>
 				</ul>
 			</div>
 		</div>
