--- a/math/index.html
+++ b/math/index.html
@@ -61,6 +61,7 @@
 					<ul>
 						<li>a x^2 + b x + c = (d x + e)(f x + g)</li>
 					</ul>
+					<li><a href="../Herons-Formula-Training/index.html">Heron's Formula Training (to calculate a triangle area)</a></li>
 				</ul>
 			</div>
 		</div>
