--- a/math/index_j.html
+++ b/math/index_j.html
@@ -59,6 +59,7 @@
 					<ul>
 						<li>a x^2 + b x + c = (d x + e)(f x + g)</li>
 					</ul>
+					<li><a href="../Herons-Formula-Training/index.html">ヘロンの公式による三角形の面積計算の練習</a></li>
 				</ul>
 			</div>
 		</div>
