The link to Prime Factorization has been added.

--- a/math/index.html
+++ b/math/index.html
@@ -53,6 +53,10 @@
 		<div id="container">
 			<div class="str_subsubtitle">Contents</div>
 				<ul>
+					<li><a href="../PrimeFactorizationTest/index.html">Prime Factorization Test</a></li>
+					<ul>
+						<li>e.g. 360 -> 2^3 * 3^2 * 5</li>
+					</ul>
 					<li><a href="../Factorization-Training/index_basic.html">Factorization Training Basic</a></li>
 					<ul>
 						<li>x^2 + b x + c = (x + e)(x + g)</li>
