--- a/math/index_j.html
+++ b/math/index_j.html
@@ -51,6 +51,10 @@
 		<div id="container">
 			<div class="str_subsubtitle">コンテンツ</div>
 				<ul>
+					<li><a href="../PrimeFactorizationTest/index_j.html">素因数分解(複数可)</a></li>
+					<ul>
+						<li>(例) 360 -> 2^3 * 3^2 * 5</li>
+					</ul>
 					<li><a href="../Factorization-Training/index_basic.html">因数分解の練習(基礎)</a></li>
 					<ul>
 						<li>x^2 + b x + c = (x + e)(x + g)</li>
