The bellow content has been added. - Triangle closed by linear and quadratic functions

--- a/math/index.html
+++ b/math/index.html
@@ -66,6 +66,7 @@
 						<li>a x^2 + b x + c = (d x + e)(f x + g)</li>
 					</ul>
 					<li><a href="../Herons-Formula-Training/index.html">Heron's Formula Training (to calculate a triangle area)</a></li>
+					<li><a href="../triangle-closed-by-linear-and-quadratic-functions/">Triangle closed by linear and quadratic functions</a></li>
 				</ul>
 			</div>
 		</div>
