--- a/math/index_j.html
+++ b/math/index_j.html
@@ -63,7 +63,8 @@
 					<ul>
 						<li>a x^2 + b x + c = (d x + e)(f x + g)</li>
 					</ul>
-					<li><a href="../Herons-Formula-Training/index.html">ヘロンの公式による三角形の面積計算の練習</a></li>
+					<li><a href="../Herons-Formula-Training/">ヘロンの公式による三角形の面積計算の練習</a></li>
+					<li><a href="../triangle-closed-by-linear-and-quadratic-functions/">2次曲線と直線の交点の関係</a></li>
 				</ul>
 			</div>
 		</div>
